<resources>
    <string name="app_name">reAndroid1_1_HW</string>
    <string name="passenger">Passenger</string>
    <string name="passenger_name">Kathleen Huang</string>
    <string name="jfk">JFK</string>
    <string name="sea">SEA</string>
    <string name="new_york_city">NEW YORK CITY</string>
    <string name="seattle">SEATTLE</string>
    <string name="depart">DEPART</string>
    <string name="depart_time">8:00AM</string>
    <string name="arrive">ARRIVE</string>
    <string name="arrive_time">11:17AM</string>
    <string name="boarding_begins">BOARDING BEGINS</string>
    <string name="boarding_time">7:30AM</string>
    <string name="gate_num">D4</string>
    <string name="gate">GATE</string>
    <string name="seat">SEAT</string>
    <string name="seat_num">3C</string>
    <string name="flight">FLIGHT</string>
    <string name="flight_num">D2218</string>
</resources>