<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoIv"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:background="@drawable/pngegg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:id="@+id/firstCont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoIv"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/passengerTv"
            android:text="@string/passenger"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:fontFamily="sans-serif-condensed"
            android:layout_marginStart="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/passengerNameTv"
            android:text="@string/passenger_name"
            android:textStyle="bold"
            android:textColor="@color/dark_blue"
            android:textSize="18sp"
            android:fontFamily="sans-serif-thin"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/secondCont"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:background="@drawable/fly2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstCont"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/flyFromTv"
            android:text="@string/jfk"
            android:textSize="40sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/flyToTv"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/flyToTv"
            android:text="@string/sea"
            android:textSize="40sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/flyFromTv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/locationFromTv"
            android:text="@string/new_york_city"
            android:textSize="16sp"
            android:textColor="@color/dark_blue"
            android:fontFamily="sans-serif-condensed"
            app:layout_constraintStart_toStartOf="@id/flyFromTv"
            app:layout_constraintTop_toBottomOf="@id/flyFromTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/locationToTv"
            android:text="@string/seattle"
            android:textSize="16sp"
            android:textColor="@color/dark_blue"
            android:fontFamily="sans-serif-condensed"
            app:layout_constraintStart_toStartOf="@id/flyToTv"
            app:layout_constraintTop_toBottomOf="@id/flyToTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/departTv"
            android:text="@string/depart"
            android:textSize="14sp"
            android:textColor="@color/dark_blue"
            android:fontFamily="sans-serif-black"
            app:layout_constraintStart_toStartOf="@id/flyFromTv"
            app:layout_constraintTop_toBottomOf="@id/locationFromTv"
            android:layout_marginTop="80dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/departTimeTv"
            android:text="@string/depart_time"
            android:textSize="30sp"
            android:textColor="@color/dark_blue"
            android:fontFamily="sans-serif-condensed-light"
            app:layout_constraintStart_toStartOf="@id/flyFromTv"
            app:layout_constraintTop_toBottomOf="@id/departTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/arriveTv"
            android:text="@string/arrive"
            android:textSize="14sp"
            android:textColor="@color/dark_blue"
            android:fontFamily="sans-serif-black"
            app:layout_constraintStart_toStartOf="@id/flyToTv"
            app:layout_constraintTop_toBottomOf="@id/locationToTv"
            android:layout_marginTop="80dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/arriveTimeTv"
            android:text="@string/arrive_time"
            android:textSize="30sp"
            android:textColor="@color/dark_blue"
            android:fontFamily="sans-serif-condensed-light"
            app:layout_constraintStart_toStartOf="@id/flyToTv"
            app:layout_constraintTop_toBottomOf="@id/arriveTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/thirdCont"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondCont"
        android:layout_width="200dp"
        android:layout_height="280dp"
        android:orientation="vertical"
        android:padding="40dp">

        <TextView
            android:id="@+id/boardingTv"
            android:text="@string/boarding_begins"
            android:textSize="14sp"
            android:textColor="@color/dark_blue"
            android:fontFamily="sans-serif-condensed-light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/boardingTimeTv"
            android:text="@string/boarding_time"
            android:textSize="28sp"
            android:textColor="@color/dark_blue"
            android:fontFamily="sans-serif-condensed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/gateTv"
            android:text="@string/gate"
            android:textSize="14sp"
            android:textColor="@color/dark_blue"
            android:fontFamily="sans-serif-condensed-light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"/>
        <TextView
            android:id="@+id/gateNumTv"
            android:text="@string/gate_num"
            android:textSize="28sp"
            android:textColor="@color/dark_blue"
            android:fontFamily="sans-serif-condensed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/seatTv"
            android:text="@string/seat"
            android:textSize="14sp"
            android:textColor="@color/dark_blue"
            android:fontFamily="sans-serif-condensed-light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"/>
        <TextView
            android:id="@+id/seatNumTv"
            android:text="@string/seat_num"
            android:textSize="28sp"
            android:textColor="@color/dark_blue"
            android:fontFamily="sans-serif-condensed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/fourthCont"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondCont"
        android:layout_width="200dp"
        android:layout_height="280dp"
        android:orientation="vertical"
        android:padding="40dp">

        <TextView
            android:id="@+id/flightTv"
            android:text="@string/flight"
            android:textSize="14sp"
            android:textColor="@color/dark_blue"
            android:fontFamily="sans-serif-condensed-light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/flightNumTv"
            android:text="@string/flight_num"
            android:textSize="28sp"
            android:textColor="@color/dark_blue"
            android:fontFamily="sans-serif-condensed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/qrCodeIv"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:background="@drawable/qr_code"
            android:layout_marginTop="18dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>